# college-rep

./: .gitignore
c#/25-05-13/: Program.cs  join-practice.cs
c#/25-05-19/: Program.cs  задание1  залание2
c#/memento/: CareTaker.cs  ConcreteMemento.cs  IMemento.cs
cpp/: main
cpp/25-02-04 oop/: Point.hpp  main.cpp
cpp/Animal_inheritance/: main  main.cpp
cpp/Defend this/: Drink.hpp  main.cpp
cpp/abstract_shape/: CMakeLists.txt  Shape.cpp  Shape.h  main.cpp
cpp/fresh-meat/: main  main.cpp
cpp/friend_functions/: main  main.cpp
cpp/headers/: dynArray.hpp
cpp/hpp/: dynArray.hpp  lifeEasier.hpp  sort.hpp
cpp/hw 13-01 to 20-01/: main.cpp
cpp/hw 14-01 to 21-01/: main.cpp
cpp/hw 15-01 to 22-01/: main.cpp
cpp/hw 20-01 to 27-01/: main.cpp
cpp/hw 22-01 to 29-01/: main.cpp
cpp/hw 27-01 to 29-01/: .clang-format
cpp/inter_clion/: CMakeLists.txt  main.cpp
cpp/inter_clion/include/: consonant.hpp  interface.hpp  vovel.hpp
cpp/inter_clion/src/: consonant.cpp  vovel.cpp
cpp/mul inherit/: main.cpp
cpp/nasledstvo/: Apartment.cpp  Apartment.h  Building.cpp  Building.h  Garage.cpp  Garage.h  House.cpp  House.h  main.cpp
cpp/nasledstvo_clion/: .clang-format  .main_run.sh  CMakeLists.txt  main.cpp
cpp/nasledstvo_clion/head/: Apartment.h  Building.h  Garage.h  House.h  Menu.h
cpp/nasledstvo_clion/src/: Apartment.cpp  Building.cpp  Garage.cpp  House.cpp  Menu.cpp
cpp/overload/: main  main.cpp
cpp/some_hw/: main  main.cpp
cpp/vector/: main  main.cpp
cpp/virtual thing/: main.cpp
cpp/Операторы приведения типов/: main.cpp
python/: main.py
(+23 files in other folders)
